# AGE

./: .editorconfig  .gitignore  .gitmodules  AGE.rc  AGE.sln  AGE.vcxproj  AGE.vcxproj.filters  AGE_AboutDialog.cpp  AGE_AboutDialog.h  AGE_CheckBoxes.cpp  AGE_CheckBoxes.h  AGE_ComboBoxes.cpp  AGE_ComboBoxes.h  AGE_Copies.hpp  AGE_Frame.h  AGE_FramePieces.h  AGE_OpenDialog.cpp  AGE_OpenDialog.h  AGE_OpenSave.cpp  AGE_OpenSave.h  AGE_SFML.cpp  AGE_SFML.h  AGE_SaveDialog.cpp  AGE_SaveDialog.h  AGE_ScrolledWindow.cpp  AGE_ScrolledWindow.h  AGE_TextControls.cpp  AGE_TextControls.h  AboutDialog.cpp  AboutDialog.h  AboutIcon.xpm  AoK.xpm  AppIcon.xpm  AppIcon16.xpm  AppIcon24.xpm  AppIcon32.xpm  AppIcon48.xpm  AppIcon64.xpm  AutoBackup.xpm  BaseMainFrame.h  (+82 more)
.github/workflows/: msbuild.yml
AGE_Frame/: Animation.cpp  Civs.cpp  Constructor.cpp  DRS.cpp  General.cpp  Graphics.cpp  Lists.cpp  Other.cpp  PlayerColors.cpp  PlayerColors.hpp  Research.cpp  Sounds.cpp  TechTrees.cpp  Techage.cpp  Techs.cpp  TerrainBorders.cpp  TerrainRestrictions.cpp  Terrains.cpp  Transporting.cpp  UnitLine.cpp  Units.cpp
AGE_Frame_cpp/: Civs.cpp  Constructor.cpp  DRS.cpp  General.cpp  Graphics.cpp  Other.cpp  PlayerColors.cpp  Research.cpp  Sounds.cpp  TechTrees.cpp  Techage.cpp  TerrainBorders.cpp  TerrainRestrictions.cpp  Terrains.cpp  Transporting.cpp  UnitLine.cpp  Units.cpp
Licenses/: LGPLv2.h  SFML.h  boost.h  liblz4.h  wxWidgets.h
Misc Files/: CMakeLists.txt  Microsoft VC++ 2019 Redistributable (x86).url  Readme.txt  tooltip.cpp  tooltip.h
Precompile/: Common.cpp  Common.h
cmake/: FindIconv.cmake  FindSFML.cmake  vcpkg-wxwidgets.cmake
geniedat/: Civ.h  File.h  GVector.h  Graphic.h  GraphicAttackSound.h  GraphicDelta.h  ISerializable.h  PlayerColour.h  Research.h  ResourceCost.h  Sound.h  SoundItem.h  Techage.h  Terrain.h  TerrainPassGraphic.h  Types.h  Unit.h  UnitAttackOrArmor.h  UnitBuildingAnnex.h  UnitCommand.h  UnitDamageGraphic.h  UnitHeader.h  UnitResourceStorage.h
geniedat/unit/: Bird.h  Building.h  Creatable.h  ResourceStorage.h
